fix(tabs): fix the visible of slots

--- a/packages/Tab/tab.less
+++ b/packages/Tab/tab.less
@@ -1,3 +1,6 @@
 .fect-tab_wrapper {
-  padding-top: 0.625rem;
+  padding-top: 13px;
+  &.none {
+    display: none;
+  }
 }
